--- a/docker/html/index.html
+++ b/docker/html/index.html
@@ -24,7 +24,7 @@
 </head>
 <body onload="showRandomNumber();">
 <h1>Welcome to nginx</h1>
-<p> Caylent, If you see this page, the nginx web server is successfully installed and
+<p> If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required. </p>
 <div id="myNumber"></div>
 
